# -*- coding: utf-8 -*-

2008-10-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Update to support 1.9 libdir.
	* util/gem_prelude.rb:  Move to .template, automatically fold in
	defaults.

2008-10-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Handle nonexistent home directory.  Bug #22229 by
	Alexey Verkhovsky.

2008-10-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb, lib/rubygems/custom_require.rb:  Make kernel
	methods private.  Patch #20801 by James M. Lawrence.  Expose
	our kernel extensions to RDoc.  Make Gem::location_of_caller behave on
	Windows.  Patch by Daniel Berger.
	* doc/release_notes/rel_1_3_1.rdoc:  Final release notes for 1.3.1.
	* lib/rubygems/rubygems_version.rb:  1.3.1.

2008-10-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/unpack_command.rb:  Silence PATH warning.

2008-10-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Fix requires for inflate, deflate, etc.
	* test/*:  Convert to minitest/unit.
	* lib/rubygems/validator.rb:  Fix for MiniTest instead of test/unit
	classic in 1.9.

2008-10-03  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems.rb: Make Gem.dir respect :gemhome value from config.
	* lib/rubygems/config_file.rb: Expose :gemhome value.

2008-09-26  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb:  Disregard ownership of ~ under Windows while
	creating ~/.gem.  Fixes issues related to no uid support under
	Windows.

2008-09-24  Eric Hodel  <drbrain@segment7.net>

	* doc/release_notes/rel_1_3_0.rdoc:  Final release notes for 1.3.0.
	* lib/rubygems/rubygems_version.rb:  1.3.0.
	* lib/rubygems/builder.rb:  Examine process status correctly.  Patch
	  by Nobu.
	* test/test_gem_ext_rake_builder.rb:  Override Gem.ruby and
	  ENV['rake'] for 1.9 integration.  Patch by Nobu.

2008-09-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Only create ~/.gem by user owning ~.  Bug #21561
	by Neil Wilson.
